# coned

./: .gitignore  CNAME  README.md  asset-manifest.json  index.html  install.sh  manifest.json  pihole_installation_script
bins/: powerplot-uninstall
img/: README.md
powerplot-webapp/: package-lock.json  package.json
powerplot-webapp/src/: App.tsx  index.scss  main.tsx
pp-api/: install.sh  requirements.txt  setup.py
pp-api/powerplot_api/: __main__.py  data_handler.py  power_data.py  utils.py
pp-api/sample_data/: conedison_7fe600bb69a4.csv  sample.csv
pp-api/systemd/: pp-api.service
pp-scraper/: Dockerfile  MANIFEST.in  Makefile  install.sh  pyproject.toml  requirements.txt  setup.py
pp-scraper/powerplot_scraper/: __main__.py  config.py  config_schema.json  installation_wizard.py  provider.py  provider_coned.py  weather.py
pp-scraper/systemd/: pp-scraper.service
pp-webapp/: Dockerfile  Makefile  install.sh  package-lock.json  package.json
pp-webapp/public/: index.html  manifest.json
pp-webapp/src/: App.css  App.tsx  styles.ts
pp-webapp/systemd/: pp-webapp.service
sample_data/: main.csv  wals1002_1697603067.csv
server/: MANIFEST.in  requirements.txt  setup.py
server/powerplot/: __main__.py  api.py  config.py  installation_wizard.py  logger.py  power_data.py  provider.py  scraper.py  weather.py
static/css/: main.34886c82.css  main.34886c82.css.map  main.34ae7bfb.css  main.34ae7bfb.css.map  main.380c2254.css  (+15 more)
systemd/: pp-api.service  pp-scraper.service  pp-webapp.service
webapp/: README.md  package-lock.json  package.json
(+114 files in other folders)
