[tool.poetry]
name = "powerplot-scraper"
version = "0.1.0"
description = ""
authors = ["Lukasz Zagaja <lukasz@density.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"


[tool.poetry.group.dev.dependencies]
timezonefinder = ">=6.2.0"
jsonschema = ">=4.20.0"
geocoder = ">=1.38.1"
pandas = ">=2.1.3"
python-dateutil = ">=2.8.2"
pytz = ">=2023.3.post1"
requests = ">=2.31.0"
tzdata = ">=2023.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
